--- a/calendario_estilos.css
+++ b/calendario_estilos.css
@@ -10,9 +10,29 @@
   display:flex;
   flex-wrap:wrap;/*los elementos fluyen en múltiples líneas*/
   flex-direction:row;
-  justify-content:space-around;
+  justify-content:center;
 }
-.mes{
-  background-color:pink;
-  margin:10%;   
+
+
+.mes .imagen{
+   
+  width: 100%;
+  transform: scale(1);
+  -ms-transform: scale(1);
+  -moz-transform: scale(1);
+  -webkit-transform: scale(1);
+  -o-transform: scale(1);
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
 }
+
+.mes:hover .imagen{
+  transform: scale(0.5);
+  -ms-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  -webkit-transform: scale(0.5);
+  -o-transform: scale(0.5);
+}
+ 
