--- a/calendario_estilos.css
+++ b/calendario_estilos.css
@@ -5,6 +5,8 @@
 .Título{
   color:red;
   text-align:center;
+  font-family: 'Oswald', sans-serif;
+  font-size:4rem;
 }
 .contenedor{
   display:flex;
@@ -22,20 +24,21 @@
 }
 .flipper{ /*velocidad del giro*/
   transition: 1.90s;
-    transform-style: preserve-3d;
+    transform-style: preserve-3d; 
 }
 #front, .back{ /*oculta panel de atrás durante cambio*/
-  backface-visibility: hidden;
+  backface-visibility: hidden; 
 }
 .front{ /*envia al panel frontal a atrás*/
-  z-index:2;
+  z-index:2; 
 }
 .back{ /*evita que en el flip al dar vuelta se vea feo*/
-  transform:rotateY(180deg); 
+  transform:rotateY(180deg);  
 }
 #texto{
   color:yellow;
   text-align:center;
+  font-family: 'Staatliches', cursive;
 }
  .imagen{
   width: 100%;
