--- a/calendario_estilos.css
+++ b/calendario_estilos.css
@@ -9,6 +9,7 @@
   text-align:center;
   font-family: 'Oswald', sans-serif;
   font-size:4rem;
+  letter-spacing:11px;
 }
 .contenedor{
   display:flex;
@@ -20,6 +21,15 @@
 .contenedor:hover .flipper{/*voltea el panel al colocar el mouse*/
   transform:rotateY(180deg);
 }
+.venta{
+  width:100%;
+  color:red;
+  font-size:2rem;
+  text-align:center;
+  position:relative;
+  letter-spacing:13px;
+}
+
 .mes,#front, .back {
   width:350px;
   margin:0.5%; 
@@ -35,7 +45,7 @@
   z-index:2; 
 }
 .back{ /*evita que en el flip al dar vuelta se vea feo*/
-  transform:rotateY(180deg);  
+  transform:rotateY(180deg); 
 }
 #texto{
   color:#16C9CF;
@@ -62,4 +72,3 @@
   -webkit-transform: scale(1);
   -o-transform: scale(1);
 }
-
